--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "php": "^7.3.26",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.1",
-        "laravel/framework": "6.20.*",
+        "laravel/framework": "6.20.26",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1"
     },
